# pettai-agent

./: pyproject.toml  verify_encryption.py
.github/workflows/: release_flow.yaml
olas-sdk-starter/: .gitignore  Dockerfile  Makefile  agent_performance.json  check_agent_runner.py  get_pyinstaller_dependencies.py  index.html  requirements.txt  run.py
olas-sdk-starter/agent/: action_recorder.py  agent_performance.py  backend_chat_model.py  constants.py  daily_action_tracker.py  decision_engine.py  gas_limits.py  log.txt  olas_interface.py  pett_agent.py  pett_tools.py  pett_websocket_client.py  react_server_manager.py  staking_checkpoint.py  telegram_bot.py
olas-sdk-starter/data/: staking_checkpoint_state.json
olas-sdk-starter/frontend/: .env.example  README.md  check-env.js  craco.config.js  package.json
olas-sdk-starter/frontend/src/: App.js
olas-sdk-starter/frontend/src/hooks/: useAuthMessageListener.js
olas-sdk-starter/frontend/src/pages/: ActionHistory.jsx  AllSet.jsx  Dashboard.jsx  LoginPage.jsx  LoginPage.scss  PrivyLoginPopup.jsx
olas-sdk-starter/frontend/src/providers/: AuthProvider.jsx
olas-sdk-starter/frontend/src/utils/: originAliases.js
olas-sdk-starter/logs/: daily_action_state.json
olas-sdk-starter/persistent_data/: agent_performance.json
olas-sdk-starter/scripts/: GET_CA_BUNDLE_SECRET.md  fetch_ws_ca_bundle.py  fetch_ws_ca_bundle.sh
tests/: decision_making.py  test_enhanced_ui.py  test_integration_onchain_recording.py  test_pet_data_ui.py
tests/unit/: test_session_encryption.py
(+4 files in other folders)
