[tool.poetry]
name = "pett-agent"
version = "0.1.0"
description = "Pett Agent - AI-powered pet agent"
authors = ["Pett Agent Team"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = ">=3.8.0"
Brotli = ">=1.0.9"
asyncio-mqtt = ">=0.16.0"
python-dotenv = ">=1.0.0"
# backports-tarfile is only needed for Python < 3.12, handled separately if needed
websockets = ">=15.0.0"
python-telegram-bot = ">=22.0.0"
langchain = ">=0.3.0"
langchain-core = ">=0.3.0"
langgraph = ">=0.6.0"
langsmith = ">=0.4.0"
langchain-openai = ">=0.3.0"
pydantic = ">=2.0.0"
sqlalchemy = ">=2.0.0"
web3 = ">=6.0.0"
eth-account = ">=0.11.0"
requests = ">=2.28.0"
httpx = ">=0.28.0"
orjson = ">=3.10.0"
cryptography = ">=41.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"
mypy = ">=1.0.0"
types-requests = ">=2.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

